--- a/challenges/thecontactform/index.html
+++ b/challenges/thecontactform/index.html
@@ -9,7 +9,8 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-
+    <link rel="stylesheet" href="css/validateme.css">
+    <link rel="stylesheet" href="css/main.css">
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -17,26 +18,28 @@
   </head>
   <body>
     <div class="container">
+      <div class="statusMessage"></div>
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
 
           <h1>The Contact Form</h1>
 
-          <form role="form">
+          <form role="form" id="commentForm">
             <div class="form-group">
               <label for="inputName">Name</label>
-              <input type="password" class="form-control" id="inputName" name="name" placeholder="Enter name">
+              <!--Changed from type="password"-->
+              <input type="text" class="form-control" id="inputName" name="name" placeholder="Enter name" required>
             </div>
 
             <div class="form-group">
               <label for="inputEmail">Email address</label>
-              <input type="email" class="form-control" id="inputEmail" name="email" placeholder="Enter email">
+              <input type="email" class="form-control" id="inputEmail" name="email" placeholder="Enter email" required>
             </div>
 
             <div class="form-group">
               <label for="inputDepartment">Department</label>
-              <select name="department" id="inputDepartment" class="form-control">
-                <option value="0">Select a Department</option>
+              <select name="department" id="inputDepartment" class="form-control" required>
+                <option value="0" disabled selected="selected">Select a Department...</option>
                 <option value="sales">Sales</option>
                 <option value="hr">HR</option>
                 <option value="complaints">Complaints</option>
@@ -45,7 +48,7 @@
 
             <div class="form-group">
               <label for="inputComment">Comment</label>
-              <textarea class="form-control" rows="3" name="comment" id="inputComment"></textarea>
+              <textarea class="form-control" rows="3" name="comment" id="inputComment" required></textarea>
             </div>
 
             <button type="submit" class="btn btn-default">Submit</button>
@@ -53,5 +56,56 @@
         </div>
       </div>
     </div>
+    <script src="js/jquery-1.11.1.min.js"></script>
+    <script src="js/jquery.validate.js"></script>
+    <script>
+        $('#inputName, #inputComment').validate({
+                type : "letter",
+          allowSpace : "true"
+        });
+
+        $('#inputEmail').validate('email');
+
+        $('#commentForm').on('submit', function(e){
+            var formIsValid = $('.invalid').length === 0;
+            var formData    = $('#commentForm').serialize();
+            if (formIsValid){
+               submitViaAjax(formData);
+            }else{
+                $('.invalid').each(function(){
+                    $(this).parent().append('<div class="warning">The form cannot be submitted because this field is invalid. Please read the red text to fix the error.</div>');
+                });
+            }
+            return false;
+        });
+
+        function submitViaAjax(handleData) {
+            $.ajax({
+                     url  : "submitAjax.php", 
+                     type : 'POST',
+                     data : handleData,
+              crossDomain : false,
+              // dataType: 'json', //Uncomment to trigger error
+              success     : function(data) {
+                                           statusMessage('.statusMessage', 'Thank You. Your information has been successfully submitted', 'success');
+                                           },
+              error       : function(xhr, ajaxOptions, thrownError){
+                                           statusMessage('.statusMessage', 'Sorry. There has been an error submitting your information. <br><br>Details:<br>' + thrownError, 'error');
+                                           }
+            });
+            return false;
+        }
+
+        function statusMessage(el, str, type){
+            if (type === 'error'){
+                $(el).css('background', '#ff0000');
+            }else if (type === 'success'){
+                $(el).css('background', '#00ff00');
+            }
+            $(el).slideDown(500, function() {
+                $(this).html(str).delay(2000).slideUp();
+            });
+        }
+    </script>
   </body>
 </html>
